--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
   <div class="heart">💕</div>
   <h1>Oi, gostoso...</h1>
-  <p>Que tal retirar a sua encomenda e ter um date gostoso comigo? 😈</p>
+  <p>Que tal retirar a sua encomenda, tomar uma coisinha e fazer um sexo gostoso comigo? 😈</p>
   <p><strong>📍 Local:</strong> Algum lugar com cervejinha e depois meu quarto 😛<br>
      <strong>🕒 Horário:</strong> A definir</p>
 
