--- a/index.html
+++ b/index.html
@@ -1,91 +1,102 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Convite Especial 💌</title>
+  <title>Convite Indecente</title>
   <style>
     body {
-      background: #fff0f5;
-      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-image: url('https://i.imgur.com/QXnrcbN.jpg');
+      background-size: cover;
+      background-position: center;
+      font-family: 'Georgia', serif;
+      color: white;
+      text-shadow: 2px 2px 8px black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      flex-direction: column;
+    }
+
+    .container {
       text-align: center;
-      padding: 50px;
-      color: #a3005b;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 30px;
+      border-radius: 15px;
+      max-width: 700px;
     }
 
     h1 {
-      font-size: 40px;
+      font-size: 2.8em;
       margin-bottom: 20px;
     }
 
     p {
-      font-size: 20px;
-      margin-bottom: 30px;
-    }
-
-    .heart {
-      font-size: 80px;
-      animation: pulse 1s infinite;
+      font-size: 1.4em;
       margin-bottom: 20px;
     }
 
     .buttons {
-      margin-top: 30px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
     }
 
     .btn {
-      background-color: #ff69b4;
+      padding: 15px 30px;
+      font-size: 1.2em;
+      background-color: crimson;
       border: none;
       color: white;
-      padding: 15px 30px;
-      font-size: 18px;
       border-radius: 10px;
-      margin: 10px;
       cursor: pointer;
-      transition: 0.3s;
+      text-decoration: none;
+      transition: background 0.3s;
     }
 
     .btn:hover {
-      background-color: #e754a1;
+      background-color: darkred;
     }
 
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.2); }
+    .btn.alt {
+      background-color: gray;
     }
 
-    .response {
-      margin-top: 40px;
-      font-size: 22px;
-      font-weight: bold;
+    .btn.alt:hover {
+      background-color: #444;
+    }
+
+    audio {
       display: none;
     }
   </style>
-</head>
-<body>
-  <div class="heart">💕</div>
-  <h1>Oi, gostoso...</h1>
-  <p>Que tal retirar a sua encomenda, tomar uma coisinha e fazer um sexo gostoso comigo? 😈</p>
-  <p><strong>📍 Local:</strong> Algum lugar com cervejinha e depois meu quarto 😛<br>
-     <strong>🕒 Horário:</strong> A definir</p>
-
-  <div class="buttons">
-    <button class="btn" onclick="responder(true)">SIM, eu topo 😍</button>
-    <button class="btn" onclick="responder(false)">Não vai dar 😢</button>
-  </div>
-
-  <div class="response" id="resposta"></div>
-
   <script>
-    function responder(topou) {
-      const resposta = document.getElementById('resposta');
-      if (topou) {
-        resposta.innerText = "Já tô escolhendo a roupa... e a lingerie pra tirares 😏✨";
-      } else {
-        resposta.innerText = "Poxa... então vou ficar com saudade 😔";
-      }
-      resposta.style.display = 'block';
+    const senha = prompt("Digite a senha para acessar:");
+    if (senha !== "69") {
+      document.write("<h1 style='color: white; text-align: center; margin-top: 20%;'>Senha incorreta 😏</h1>");
+      throw new Error("Acesso negado");
     }
   </script>
+</head>
+<body>
+
+  <div class="container">
+    <h1>Convite Indecente</h1>
+    <p>Que tal retirar a encomenda, tomar uma coisinha e fazer um sexo gostoso comigo? 😏🔥😈</p>
+    <p><strong>Horário:</strong> A definir<br><strong>Local:</strong> Algum lugar pra tomar uma coisinha e depois o meu quarto 😛</p>
+    
+    <div class="buttons">
+      <a href="#" class="btn">Eu topo… me prepare 🖤</a>
+      <a href="#" class="btn alt">Hoje não... mas em breve 🔥</a>
+    </div>
+  </div>
+
+  <audio autoplay loop>
+    <source src="https://cdn.pixabay.com/download/audio/2023/03/30/audio_1690c16e48.mp3?filename=earned-it-instrumental-remake-14057.mp3" type="audio/mpeg">
+    Seu navegador não suporta áudio.
+  </audio>
+
 </body>
 </html>
